# Support_Ticket_Auto_Triage

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.ui  LICENSE.md  README.md  cuda-nightly.txt  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
models/sgd/: sgd.pkl  sgd_vectorizer.pkl
models/svm/: svm.pkl  vectorizer.pkl
notebooks/: data_exp.ipynb  data_exp_linear.ipynb  deberta.ipynb  distilBERT.ipynb  transformer.ipynb
