[project]
name = "support-ticket-auto-triage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.4.2",
    "fastapi>=0.125.0",
    "joblib>=1.5.3",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "unicorn[standard]>=2.1.4",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "transformers>=4.46.0",
    "accelerate>=1.1.0",
    "evaluate>=0.4.0",
    "numpy>=1.26.0",
]
